objects/Residential_Address__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Residential Address</relationshipLabel>
        <relationshipName>Residential_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>genesis__Applications__c</referenceTo>
        <relationshipLabel>Residential Address</relationshipLabel>
        <relationshipName>Residential_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Residential_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fraud_Check_Result_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fraud Check Result Details</label>
        <referenceTo>Fraud_Check_Result_Details__c</referenceTo>
        <relationshipLabel>Residential Address</relationshipLabel>
        <relationshipName>Residential_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>How_Long_have_you_lived_here__c</fullName>
        <label>How Long have you  lived here?</label>
        <picklist>
            <picklistValues>
                <fullName>less than 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>between 1 and 2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>between 2 and 5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>more than 5 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IdMatrix_Shared_Fraud_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IdMatrix Shared Fraud Record</label>
        <referenceTo>IdMatrix_Shared_Fraud_Record__c</referenceTo>
        <relationshipLabel>Residential Address</relationshipLabel>
        <relationshipName>Residential_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Address__c</fullName>
        <formula>if(Unit_Number__c != null,Unit_Number__c +&apos;:&apos;,&apos;&apos;)+if(Street_Number__c != null, 
IF(CONTAINS(Street_Number__c, &apos;/&apos;), 
SUBSTITUTE(Street_Number__c, &apos;/&apos;,&apos;:&apos;),Street_Number__c)+&apos;:&apos;,&apos;&apos;)+if(Street_Name__c != null,Street_Name__c+&apos;:&apos;,&apos;&apos;)+if( Street_Type__c != null,Street_Type__c +&apos;:&apos;,&apos;&apos;)+if(Suburb__c != null,Suburb__c+&apos;:&apos;,&apos;&apos;)+if(State__c != null,State__c+&apos;:&apos;,&apos;&apos;)+if(Country__c != null,Country__c+&apos;:&apos;,&apos;&apos;)+if(PostCode__c != null,PostCode__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostCode__c</fullName>
        <label>PostCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Status_Score__c</fullName>
        <formula>IF( AND(Current_Address__c,ISPICKVAL( What_is_Your_Residential_Status__c,&apos;living in my own home (no mortgage)&apos;)), 50,
IF(AND(Current_Address__c,ISPICKVAL( What_is_Your_Residential_Status__c,&apos;living in my own home (with mortgage)&apos;)),40,
IF(AND(Current_Address__c,ISPICKVAL( What_is_Your_Residential_Status__c,&apos;living with family&apos;)),-15,
IF(AND(Current_Address__c,ISPICKVAL( What_is_Your_Residential_Status__c,&apos;renting&apos;)),-25,
IF(AND(Current_Address__c,ISPICKVAL( What_is_Your_Residential_Status__c,&apos;boarding&apos;)),-40,
IF(AND(Current_Address__c,ISPICKVAL( What_is_Your_Residential_Status__c,&apos;living in employer supplied accommodation&apos;)),-40,
0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residential Status Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number__c</fullName>
        <label>Street Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Type_Code__c</fullName>
        <label>Street Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Type__c</fullName>
        <label>Street Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_at_Current_Address_Score__c</fullName>
        <formula>IF(AND(Current_Address__c,ISPICKVAL( What_is_Your_Residential_Status__c,&apos;Living with family&apos;)),0, 
IF(AND(Current_Address__c,ISPICKVAL( How_Long_have_you_lived_here__c,&apos;Between 1 and 2 years&apos;)),-20, 
IF(AND(Current_Address__c,ISPICKVAL( How_Long_have_you_lived_here__c,&apos;Between 2 and 5 years&apos;)),5, 
IF(AND(Current_Address__c,ISPICKVAL(How_Long_have_you_lived_here__c,&apos; Less than 1 year&apos;)),-40, 
IF(AND(Current_Address__c,ISPICKVAL( How_Long_have_you_lived_here__c,&apos;More than 5 years&apos;)),15, -40)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time at Current Address Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_Comprehensive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Comprehensive</label>
        <referenceTo>Veda_Comprehensive__c</referenceTo>
        <relationshipLabel>Residential Address</relationshipLabel>
        <relationshipName>Residential_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Veda_Possible_Match__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Possible Match</label>
        <referenceTo>Veda_Possible_Match__c</referenceTo>
        <relationshipLabel>Residential Address</relationshipLabel>
        <relationshipName>Residential_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>What_is_Your_Residential_Status__c</fullName>
        <label>What is Your Residential Status</label>
        <picklist>
            <picklistValues>
                <fullName>living in employer supplied accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>living with family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>boarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>renting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>living in my own home (no mortgage)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>living in my own home (with mortgage)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>first_Reported_Date__c</fullName>
        <label>first Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idReference__c</fullName>
        <label>idReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_Reported_Date__c</fullName>
        <label>last Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Residential Address</label>
    <nameField>
        <displayFormat>RA - {0000}</displayFormat>
        <label>Residential Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Residential Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>